--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="webpackEntry.js"></script>
 </head>
 
 <body>
-    WebackIndexHtml
+    WebpackIndexHtml
 </body>
